# automation

./: README.md  emails.txt  phone-numbers.txt  potential-contacts.txt  pyproject.toml
automation/: automation.py
tests/: test_automation.py
